<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>pl.wblo.jwt</groupId>
    <artifactId>jwt-simple</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>JwtSimple</name>
    <description>JWT security - integrator pom</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <modules>
        <module>logback.logger.module</module>
        <module>jwt.persistence.module</module>
        <module>jwt.auth.module</module>
        <module>jwt.manage.module</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <start-class></start-class>
        <!--     springboot.version - sprawdź, czy ta sama wersja w parent powyżej  -->
        <spring-boot.version>3.5.6</spring-boot.version>
        <slf4j.version>2.0.17</slf4j.version>
        <jjwt.version>0.13.0</jjwt.version>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.5.6</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>2.2.36</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>1.3.0.Final</version>
            </dependency>
            <dependency>
                <groupId>com.sun.istack</groupId>
                <artifactId>istack-commons-runtime</artifactId>
                <version>4.1.2</version>
            </dependency>

            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-dependencies</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-data-jpa</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-web</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-test</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
                <scope>runtime</scope>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>org.projectlombok</groupId>-->
            <!--                <artifactId>lombok</artifactId>-->
            <!--                <version>${lombok.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.jupiter</groupId>-->
            <!--                <artifactId>junit-jupiter</artifactId>-->
            <!--                <version>${junit.jupiter.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.jupiter</groupId>-->
            <!--                <artifactId>junit-jupiter-api</artifactId>-->
            <!--                <version>${junit.jupiter.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.jupiter</groupId>-->
            <!--                <artifactId>junit-jupiter-engine</artifactId>-->
            <!--                <version>${junit.jupiter.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.platform</groupId>-->
            <!--                <artifactId>junit-platform-commons</artifactId>-->
            <!--                <version>${junit.platform.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.platform</groupId>-->
            <!--                <artifactId>junit-platform-engine</artifactId>-->
            <!--                <version>${junit.platform.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.junit.platform</groupId>-->
            <!--                <artifactId>junit-platform-launcher</artifactId>-->
            <!--                <version>${junit.platform.version}</version>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>dev.samstevens.totp</groupId>
                <artifactId>totp</artifactId>
                <version>1.7.1</version>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.security</groupId>-->
            <!--                <artifactId>spring-security-core</artifactId>-->
            <!--                <version>${spring.security.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.security</groupId>-->
            <!--                <artifactId>spring-security-web</artifactId>-->
            <!--                <version>${spring.security.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.security</groupId>-->
            <!--                <artifactId>spring-security-config</artifactId>-->
            <!--                <version>${spring.security.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.security</groupId>-->
            <!--                <artifactId>spring-security-crypto</artifactId>-->
            <!--                <version>${spring.security.version}</version>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring-framework.version}</version>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>org.springframework</groupId>-->
            <!--                <artifactId>spring-beans</artifactId>-->
            <!--                <version>${spring.version}</version>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-framework.version}</version>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-autoconfigure</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot</artifactId>-->
            <!--                <version>${spring-boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-validation</artifactId>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>jakarta.persistence</groupId>-->
            <!--                <artifactId>jakarta.persistence-api</artifactId>-->
            <!--                <version>3.1.0</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.data</groupId>-->
            <!--                <artifactId>spring-data-jpa</artifactId>-->
            <!--                <version>3.5.3</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--                <artifactId>jackson-core</artifactId>-->
            <!--                <version>${fasterxml.jackson.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--                <artifactId>jackson-databind</artifactId>-->
            <!--                <version>${fasterxml.jackson.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.core</groupId>-->
            <!--                <artifactId>jackson-annotations</artifactId>-->
            <!--                <version>${fasterxml.jackson.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.datatype</groupId>-->
            <!--                <artifactId>jackson-datatype-jsr310</artifactId>-->
            <!--                <version>${fasterxml.jackson.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>com.fasterxml.jackson.datatype</groupId>-->
            <!--                <artifactId>jackson-datatype-jdk8</artifactId>-->
            <!--                <version>${fasterxml.jackson.version}</version>-->
            <!--            </dependency>-->

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>0.10.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <!--                    <annotationProcessorPaths>-->
                        <!--                        TODO: dla Java 23 musi być - nie usuwwać -->
                        <!--                        <path>-->
                        <!--                            <groupId>org.projectlombok</groupId>-->
                        <!--                            <artifactId>lombok</artifactId>-->
                        <!--                        </path>-->
                        <!--                    </annotationProcessorPaths>-->
                        <compilerArgs>
                            <jvmArguments>
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                                <!--                                &#45;&#45;add-opens=java.base/java.util=ALL-UNNAMED-->
                                <!--                                &#45;&#45;add-opens=java.base/java.lang.reflect=ALL-UNNAMED-->
                                <!--                                &#45;&#45;add-opens=java.base/java.text=ALL-UNNAMED-->
                                <!--                                &#45;&#45;add-opens=java.desktop/java.awt.font=ALL-UNNAMED-->
                            </jvmArguments>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <!--                <executions>-->
                    <!--                    <execution>-->
                    <!--                        <goals>-->
                    <!--                            <goal>build-image</goal>-->
                    <!--                        </goals>-->
                    <!--                    </execution>-->
                    <!--                </executions>-->
                    <configuration>
                        <mainClass>${start-class}</mainClass>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                    <!--                    <executions>-->
                    <!--                        <execution>-->
                    <!--                            <goals>-->
                    <!--                                <goal>build-image</goal>-->
                    <!--                            </goals>-->
                    <!--                        </execution>-->
                    <!--                    </executions>-->
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <!--                        chwilowo zablokuj automatyczne testy - wykonam ręcznie-->
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
</project>
